force-app/main/default/objects/College__c/College__c.object-meta.xml
<CustomObject>
    <label>College</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>College Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>