force-app/main/default/objects/College__c/fields/Admission_Status__c.field-meta.xml
<CustomField>
    <fullName>Admission_Status__c</fullName>
    <label>Admission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>CanCelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>