force-app/main/default/objects/College__c/fields/Number_of_student__c.field-meta.xml
<CustomField>
    <fullName>Number_of_student__c</fullName>
    <label>Number of student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>