force-app/main/default/objects/College__c/fields/Student_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Student_Percentage__c</fullName>
    <label>Student Percentage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>